profilelist1exp/unpackaged/objects/Role__c.object
<CustomObject>
    <description>This object is to create and maintain the roles for the teams that uses geography based owner assignment process for the relationship leads and Account Plays.</description>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Client Computing</fullName>
                </value>
                <value>
                    <fullName>Dell Data Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <type>TextArea</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role_Description__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Group_is_required</fullName>
        <active>true</active>
        <description>This rule is to make the Group field required when created through API</description>
        <errorConditionFormula>ISPICKVAL(Group__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Group__c</errorDisplayField>
        <errorMessage>Group is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_Name_should_be_unique</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.Role__c.Fields.Name,$ObjectType.Role__c.Fields.Name, Name)),true , false), 
AND(ISCHANGED(Name), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.Role__c.Fields.Name,$ObjectType.Role__c.Fields.Name, Name)),true,false)))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This name already  exists. Role Name should be unique.</errorMessage>
    </validationRules>
</CustomObject>